@@ -45,7 +45,9 @@ Namespace handling has also affects on xdb_sql. In the node selections
 paths in the SQL query definitions, you now have to specify the namespaces
 as well using prefixes. Which namespace these prefixes define, has to
 be configured using the new <nsprefixes/> element in the configuration.
-See jabber.xml.dist for an updated example.
+See jabber.xml.dist for an updated example. Please have a very careful
+look at the <delete/> definition for the 'jabber:x:offline' handler, the
+SQL for it has changed.
 
 If you are using xdbfiletool to access or manipulate spool files, note
 that the command line syntax of this utility has changed completely.
